--- a/src/YT_Channels.ipynb
+++ b/src/YT_Channels.ipynb
@@ -47,13 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize YouTube API client\n",
     "api_service_name = \"youtube\"\n",
     "api_version = \"v3\"\n",
-    "youtube = googleapiclient.discovery.build(api_service_name, api_version, developerKey='AIzaSyBwR1m-z7YbxcKX1GuFSS9jnBw-yO5KfWA')"
+    "youtube = googleapiclient.discovery.build(\n",
+    "    api_service_name, \n",
+    "    api_version, \n",
+    "    developerKey=os.getenv('apikey')\n",
+    ")"
    ]
   },
   {
