--- a/src/init_db.ipynb
+++ b/src/init_db.ipynb
@@ -11,6 +11,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44141242",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r ../requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f14fb353",
    "metadata": {},
